# MidiRouterClient

./: .gitignore  CMakeCogMain.j2  CMakeCogMain.py  CMakeLists.txt  MidiRouterClient.qmlproject  MidiRouterClient.qmlproject.qtds  ParsedArguments.cpp  ParsedArguments.h  README.md  SBOM.md  deploy-linux.sh  deploy-mac-static.sh  deploy-mac.sh  deploy-windows.cmd  main.cpp  qmlmodules  qtquickcontrols2.conf  quithelper.cpp  quithelper.h
Bal/: BalData.cpp  BalData.h  BalDataPrivate.h  BalDataPrivate.py  CMakeLists.txt
Bal/RtMidiRouterLib/: CMakeCog.py  CMakeLists.txt  MidiClientClass.cpp  MidiClientClass.h  MidiServerClass.cpp  MidiServerClass.h
Bal/RtMidiRouterLib/MidiClient/: CMakeCog.py  CMakeLists.txt  Dropdownlist.h  EasyConfig.h  EasyConfigPrivate.h  EasyConfigPrivate.py  EasyConfigRoute.h  EasyConfigRoutePrivate.cpp  EasyConfigRoutePrivate.h  FilterAndTransform.cpp  FilterAndTransform.h  FilterAndTransformPrivate.cpp  FilterAndTransformPrivate.h  FilterMidiDestination.cpp  FilterMidiDestination.h  FilterMidiDestinationPrivate.cpp  FilterMidiDestinationPrivate.h  FilterMidiDestinationPrivate.py  FilterNetworkDestination.cpp  FilterNetworkDestination.h  FilterNetworkDestinationPrivate.h  FilterNetworkDestinationPrivate.py  FilterSchedule.cpp  FilterSchedule.h  FilterSchedulePrivate.h  FilterToConsle.cpp  FilterToConsle.h  FilterToConslePrivate.h  FilterToConslePrivate.py  MidiClientConnection.h  MidiClientConnectionPrivate.cpp  MidiClientConnectionPrivate.h  MidiPresetControlEasyConfig.h  MidiRouteInput.cpp  MidiRouteInput.h  MidiRouteInputCc14bit.cpp  MidiRouteInputCc14bit.h  MidiRouteInputCc14bit.py  MidiRouteInputPrivate.cpp  MidiRouteInputPrivate.h  (+31 more)
Bal/RtMidiRouterLib/MidiClient/GenHpp/: EasyConfig.cpp  EasyConfig.h  EasyConfigRoute.cpp  EasyConfigRoute.h  FilterAndTransform.cpp  FilterAndTransform.h  FilterMidiDestination.cpp  FilterMidiDestination.h  FilterNetworkDestination.cpp  FilterNetworkDestination.h  FilterSchedule.cpp  FilterSchedule.h  FilterToConsle.cpp  FilterToConsle.h  MidiClientConnection.cpp  MidiClientConnection.h  MidiClientUtil.cpp  MidiClientUtil.h  MidiPresetControlEasyConfig.h  MidiRouteInput.cpp  MidiRouteInput.h  MidiRoutePreset.cpp  MidiRoutePreset.h  MidiRouterChain.cpp  MidiRouterChain.h  Monitor.cpp  Monitor.h  PresetMidiControl.cpp  PresetMidiControl.h  UserConfigGenJson.cpp  UserConfigGenJson.h  UserConfigParseJson.cpp  UserConfigParseJson.h  UserControl.cpp  UserControl.h  UserDataConfig.cpp  UserDataConfig.h  UserDataConfigItf.h
Bal/RtMidiRouterLib/MidiClient/genPrpt/: Dropdownlist.cpp  Dropdownlist.h  Dropdownlist.hpp  Dropdownlist.py  EasyConfigPrivate.cpp  EasyConfigPrivate.h  EasyConfigPrivate.hpp  EasyConfigPrivate.py  EasyConfigRoutePrivate.cpp  EasyConfigRoutePrivate.h  EasyConfigRoutePrivate.hpp  EasyConfigRoutePrivate.py  FilterAndTransformPrivate.cpp  FilterAndTransformPrivate.h  FilterAndTransformPrivate.hpp  FilterAndTransformPrivate.py  FilterMidiDestinationPrivate.cpp  FilterMidiDestinationPrivate.h  FilterMidiDestinationPrivate.hpp  FilterMidiDestinationPrivate.py  FilterNetworkDestinationPrivate.cpp  FilterNetworkDestinationPrivate.h  FilterNetworkDestinationPrivate.hpp  FilterSchedulePrivate.cpp  FilterSchedulePrivate.h  FilterSchedulePrivate.hpp  FilterSchedulePrivate.py  FilterSwitchData1Data2Private.py  FilterToConslePrivate.cpp  FilterToConslePrivate.h  FilterToConslePrivate.hpp  FilterToConslePrivate.py  MidiClientConnectionPrivate.cpp  MidiClientConnectionPrivate.h  MidiClientConnectionPrivate.hpp  MidiClientConnectionPrivate.py  MidiRouteInputCc14bit.cpp  MidiRouteInputCc14bit.h  MidiRouteInputCc14bit.hpp  MidiRouteInputPrivate.cpp  (+34 more)
Bal/RtMidiRouterLib/MidiClient/hpp/: EasyConfig.hpp  EasyConfigRoute.hpp  FilterAndTransform.hpp  FilterMidiDestination.hpp  FilterNetworkDestination.hpp  FilterSchedule.hpp  FilterToConsle.hpp  MidiClientConnection.hpp  MidiClientUtil.hpp  MidiPresetControlEasyConfig.hpp  MidiRouteInput.hpp  MidiRoutePreset.hpp  MidiRouterChain.hpp  Monitor.hpp  PresetMidiControl.hpp  UserConfigGenJson.hpp  UserConfigParseJson.hpp  UserControl.hpp  UserDataConfig.hpp  UserDataConfigItf.hpp
Bal/RtMidiRouterLib/MidiRoute/: RoutFiltersChainClass.h  midiroute.cpp  midiroute.h
Bal/RtMidiRouterLib/MidiRoute/filters/: SendRemoteServer.h  SignalSlot.h
Bal/RtMidiRouterLib/RtMidiWrap/: RtMidiWrap.cpp  RtMidiWrap.h
Bal/RtMidiRouterLib/RtMidiWrap/RtMidiLib/: CMakeLists.txt
Bal/RtMidiRouterLib/webchannel/: ApplyConfig.cpp  ApplyConfig.h  ApplyConfig.hpp  throttle.hpp  wcmidiin.cpp  wcmidiin.h  wcmidiout.h  wcuserdata.cpp  wcuserdata.h  wcuserdata.hpp
Design/: CMakeLists.txt  (+3 more)
MidiRouterClientCli/: CMakeCogMain.j2  CMakeCogMain.py  CMakeLists.txt  midi-router-client-cli.desktop
MidiRouterClientCli/Bal/: BalData.cpp  BalData.h  BalDataPrivate.cpp  BalDataPrivate.h  BalDataPrivate.py  CMakeLists.txt  ParsedArguments.cpp  ParsedArguments.h
MidiRouterClientCli/Bal/RtMidiRouterLib/: CMakeCog.py  MidiClientClass.cpp  MidiServerClass.cpp  MidiServerClass.h
MidiRouterClientCli/Cli/: CliWinService.cpp  CliWinService.h  main.cpp
MidiRouterClientCli/deployScript/: midi-router-client.sh  postinst  prerm
bal/: BalData.cpp  BalData.h  BalDataPrivate.cpp  BalDataPrivate.h  BalDataPrivate.py  CMakeLists.txt  lclStor.py
bal/RtMidiRouterLib/: CMakeLists.txt  MidiClientClass.cpp  MidiClientClass.h  MidiServerClass.cpp  MidiServerClass.h
bal/RtMidiRouterLib/MidiClient/: CMakeLists.txt  Dropdownlist.h  Dropdownlist.py  EasyConfig.cpp  EasyConfig.h  EasyConfigPrivate.cpp  EasyConfigRoute.cpp  EasyConfigRoute.h  EasyConfigRoutePrivate.cpp  EasyConfigRoutePrivate.h  MidiClientConnection.cpp  MidiClientConnection.h  MidiClientConnection.py  MidiClientConnectionPrivate.cpp  MidiClientConnectionPrivate.h  MidiClientConnectionPrivate.py  MidiRouteInputPrivate.py  MidiRoutePreset.h  MidiRoutePresetPrivate.h  MidiRoutePresetPrivate.py  PresetMidiControlPrivate.h  PresetMidiControlPrivate.py  UserDataConfig.cpp  UserDataConfig.h  UserDataConfigPrivate.cpp  UserDataConfigPrivate.h  UserDataConfigPrivate.py  property.py
(+175 files in other folders)
